# EEG-Synthesis-Framework

./: .gitignore  .gitignore.sh  .vscode:settings.json  demo.py  gui_app.py  pyproject.toml  quickstart.py  requirements.txt  test_framework.py
blocks/: generators.py  observables.py  spatial.py  transforms.py
core/: backend.py  types.py
eeg_io/: export.py
pipeline/: orchestrator.py
