[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-synthesis"
version = "0.1.0"
description = "EEG synthesis framework"
requires-python = ">=3.10"

[tool.setuptools]
# Explicit list of top-level packages in your flat layout
packages = ["core", "blocks", "pipeline", "eeg_io"]
